
    Before:
      errors.add(:name, "must be shorter") if name.size > 10
      errors.on(:name)  # => "must be shorter"
      errors.on("name") # => nil

    After:
      errors.add(:name, "must be shorter") if name.size > 10
      errors.on(:name)  # => "must be shorter"
      errors.on("name") # => "must be shorter"

* Added Base.validates_boundries_of that delegates to add_on_boundary_breaking #312 [Tobias Luetke]. Example:

    class Person < ActiveRecord::Base
      validates_boundries_of :password, :password_confirmation
      validates_boundries_of :user_name, :within => 6..20, :too_long => "pick a shorter name", :too_short => "pick a longer name"
    end

* Added Base.validate_presence as an alternative to implementing validate and doing errors.add_on_empty yourself.

* Added Base.validates_uniqueness_of that alidates whether the value of the specified attributes are unique across the system. 
  Useful for making sure that only one user can be named "davidhh".
  
    class Person < ActiveRecord::Base
      validates_uniqueness_of :user_name
    end
  
  When the record is created, a check is performed to make sure that no record exist in the database with the given value for the specified
  attribute (that maps to a column). When the record is updated, the same check is made but disregarding the record itself.


* Added Base.validates_confirmation_of that encapsulates the pattern of wanting to validate a password or email address field with a confirmation. Example:
 
     Model:
       class Person < ActiveRecord::Base
         validates_confirmation_of :password
       end
  
     View:
       <%= password_field "person", "password" %>
       <%= password_field "person", "password_confirmation" %>
  
   The person has to already have a password attribute (a column in the people table), but the password_confirmation is virtual.
   It exists only as an in-memory variable for validating the password. This check is performed both on create and update.

